[SelectWorkspaceDialog] Fix dark mode colors for different states
Fixed: 417143431
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6532717
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/ai_assistance/selectWorkspaceDialog.css
+++ b/front_end/panels/ai_assistance/selectWorkspaceDialog.css
@@ -62,7 +62,7 @@ li:focus {
   margin-right: var(--sys-size-4);
 }
 
-.selected .folder-icon {
+li.selected .folder-icon {
   color: var(--icon-file-authored);
 }
 
@@ -71,8 +71,16 @@ li:focus {
 }
 
 .theme-with-dark-background, :host-context(.theme-with-dark-background) {
-  li.selected, .selected .folder-icon {
+  /*
+    * List item is focused and selected: there is no valid state where the list item is focused but not selected.
+  */
+  li:focus {
     color: var(--app-color-navigation-drawer-label-selected);
+    background-color: var(--app-color-navigation-drawer-background-selected);
+
+    & .folder-icon {
+      color: var(--app-color-navigation-drawer-label-selected);
+    }
   }
 }
 
